TSVPORTAL-11960 - Disable inactive item on edit

--- a/app/views/packingplan-create.html
+++ b/app/views/packingplan-create.html
@@ -163,31 +163,31 @@
                         <div class="col-xs-12 col-sm-5">
                           <div class="form-group">
                             <label>Retail Item</label>
-                            <ui-select ng-if="!isDisabled()" name="retailItem" theme="bootstrap" ng-model="item.itemMasterId" ng-required="item.maxQty || item.minQty">
+                            <ui-select ng-if="!(isDisabled() || isItemInactive(item))" name="retailItem" theme="bootstrap" ng-model="item.itemMasterId" ng-required="item.maxQty || item.minQty">
                               <ui-select-match placeholder="Select Retail Item">{{$select.selected.itemName}}</ui-select-match>
                               <ui-select-choices repeat="itm.id as itm in itemMasterList | unique: 'id' ">
                                 <div ng-bind-html="itm.itemName"></div>
                               </ui-select-choices>
                             </ui-select>
-                            <input ng-if="isDisabled()" ng-model="item.itemName" type="text" class="form-control" name="retailItem" ng-disabled="true">
+                            <input ng-if="isDisabled() || isItemInactive(item)" ng-model="item.itemName" type="text" class="form-control" name="retailItem" ng-disabled="true">
                           </div>
                         </div>
                         <div class="col-xs-12 col-sm-3">
                           <div class="form-group">
                             <label>Min Qty</label>
-                            <input custom-validity custom-pattern="number" type="text" maxlength="5" class="form-control" name="minQty" ng-model="item.minQty" placeholder="0" ng-disabled="isDisabled()" ng-required="item.itemMasterId || item.maxQty" />
+                            <input custom-validity custom-pattern="number" type="text" maxlength="5" class="form-control" name="minQty" ng-model="item.minQty" placeholder="0" ng-disabled="isDisabled() || isItemInactive(item)" ng-required="item.itemMasterId || item.maxQty" />
                           </div>
                         </div>
                         <div class="col-xs-12 col-sm-3">
                           <div class="form-group">
                             <label>Max Qty</label>
-                            <input custom-validity custom-pattern="number" type="text" maxlength="5" class="form-control" name="maxQty" ng-model="item.maxQty" placeholder="0" ng-disabled="isDisabled()" ng-required="item.itemMasterId || item.minQty" />
+                            <input custom-validity custom-pattern="number" type="text" maxlength="5" class="form-control" name="maxQty" ng-model="item.maxQty" placeholder="0" ng-disabled="isDisabled() || isItemInactive(item)" ng-required="item.itemMasterId || item.minQty" />
                           </div>
                         </div>
                         <div class="col-xs-12 col-sm-1">
                           <div class="form-group" ng-hide="isDisabled()">
                             <label class="invisible">Remove</label>
-                            <button type="button" style="width: 30%;display:inherit;line-height: 2" class="btn-remove-price-group btn btn-danger btn-xs" ng-click="removeObjectItemRestrictions(planObject.packingPlanObjectItem, key)" ng-disabled="isDisabled()">
+                            <button type="button" style="width: 30%;display:inherit;line-height: 2" class="btn-remove-price-group btn btn-danger btn-xs" ng-click="removeObjectItemRestrictions(planObject.packingPlanObjectItem, key)" ng-disabled="isDisabled() || isItemInactive(item)">
                               <i class="fa fa-close"></i>
                             </button>
                           </div>
