TSVPORTAL-11960 - Working on retriving items from object dates

--- a/app/views/directives/date-picker-field.html
+++ b/app/views/directives/date-picker-field.html
@@ -10,6 +10,7 @@
         class="form-control"
         autocomplete="off"
         ng-model="ngModel"
+        ng-change="ngChange"
         placeholder="{{ placeholder }}"/>
     </p>
   </div>
