--- a/app/views/packingplan-create.html
+++ b/app/views/packingplan-create.html
@@ -213,7 +213,7 @@
                         <div class="col-xs-12 col-sm-3">
                           <div class="form-group"  ng-class="validation.fieldCssClass(packingPlanDataForm, 'UnitOfMeasurement[' + (key + 1) + ']')">
                             <label class="invisible">Dimension</label>
-                            <select ng-model="planObject.dimensionType" ng-required="planObject.breadth || planObject.length || planObject.height" name="UnitOfMeasurement" ng-disabled="isDisabled()" class="form-control">
+                            <select ng-model="planObject.dimensionType" ng-required="planObject.breadth || planObject.length || planObject.height" name="UnitOfMeasurement[{{ key + 1 }}]" ng-disabled="isDisabled()" class="form-control">
                               <option value="">Select UOM</option>
                               <option
                                 ng-selected="planObject.dimensionType === dimension.id"
@@ -245,27 +245,33 @@
                       </div>
                       <div class="row" ng-repeat="(itemKey, item) in planObject.packingPlanObjectItem track by $index">
                         <div class="col-xs-12 col-sm-5">
-                          <div class="form-group">
+                          <div class="form-group" ng-class="validation.fieldCssClass(packingPlanDataForm, 'retailItem[' + (itemKey + 1) + ']')">
                             <label>Retail Item</label>
-                            <ui-select ng-if="!(isDisabled() || isItemInactive(planObject, item))" name="retailItem" theme="bootstrap" ng-model="item.itemMasterId" ng-required="item.maxQty || item.minQty">
+                            <ui-select ng-if="!(isDisabled() || isItemInactive(planObject, item))" name="retailItem[{{ itemKey + 1 }}]" theme="bootstrap" ng-model="item.itemMasterId" ng-required="item.maxQty || item.minQty">
                               <ui-select-match placeholder="Select Retail Item">{{$select.selected.itemName}}</ui-select-match>
                               <ui-select-choices repeat="itm.id as itm in planObject.itemMasterList | unique: 'id' ">
                                 <div ng-bind-html="itm.itemName"></div>
                               </ui-select-choices>
                             </ui-select>
-                            <input ng-if="isDisabled() || isItemInactive(planObject, item)" ng-model="item.itemName" type="text" class="form-control" name="retailItem" ng-disabled="true">
+                            <input
+                              ng-if="isDisabled() || isItemInactive(planObject, item)"
+                              ng-model="item.itemName"
+                              type="text"
+                              class="form-control"
+                              name="retailItem"
+                              ng-disabled="true">
                           </div>
                         </div>
                         <div class="col-xs-12 col-sm-3">
-                          <div class="form-group">
+                          <div class="form-group" ng-class="validation.fieldCssClass(packingPlanDataForm, 'minQty[' + (itemKey + 1) + ']')">
                             <label>Min Qty</label>
-                            <input custom-validity custom-pattern="number" type="text" maxlength="5" class="form-control" name="minQty" ng-model="item.minQty" placeholder="0" ng-disabled="isDisabled() || isItemInactive(planObject, item)" ng-required="item.itemMasterId || item.maxQty" />
+                            <input custom-validity custom-pattern="number" type="text" maxlength="5" class="form-control" name="minQty[{{ itemKey + 1 }}]" ng-model="item.minQty" placeholder="0" ng-disabled="isDisabled() || isItemInactive(planObject, item)" ng-required="item.itemMasterId || item.maxQty" />
                           </div>
                         </div>
                         <div class="col-xs-12 col-sm-3">
-                          <div class="form-group">
+                          <div class="form-group" ng-class="validation.fieldCssClass(packingPlanDataForm, 'maxQty[' + (itemKey + 1) + ']')">
                             <label>Max Qty</label>
-                            <input custom-validity custom-pattern="number" type="text" maxlength="5" class="form-control" name="maxQty" ng-model="item.maxQty" placeholder="0" ng-disabled="isDisabled() || isItemInactive(planObject, item)" ng-required="item.itemMasterId || item.minQty" />
+                            <input custom-validity custom-pattern="number" type="text" maxlength="5" class="form-control" name="maxQty[{{ itemKey + 1 }}]" ng-model="item.maxQty" placeholder="0" ng-disabled="isDisabled() || isItemInactive(planObject, item)" ng-required="item.itemMasterId || item.minQty" />
                           </div>
                         </div>
                         <div class="col-xs-12 col-sm-1">
