--- a/app/views/packingplan-create.html
+++ b/app/views/packingplan-create.html
@@ -113,7 +113,7 @@
                             ng-disabled="isDisabled()"
                             required="true">
                         </div>
-                        <div class="col-xs-12 col-sm-4" ng-class="validation.fieldCssClass(packingPlanDataForm, 'ObjectEffectiveStartDate[' + (key + 1) + ']')">
+                        <div class="col-xs-12 col-sm-4" ng-class="validation.calendarCssClass(packingPlanDataForm, planObject.startDate)">
                           <date-picker-field
                             disable="isDisabled()"
                             form="packingPlanDataForm"
@@ -125,7 +125,7 @@
                             ng-change="refreshPlanObjectItems(planObject)">
                           </date-picker-field>
                         </div>
-                        <div class="col-xs-12 col-sm-4" ng-class="validation.fieldCssClass(packingPlanDataForm, 'ObjectEffectiveEndDate[' + (key + 1) + ']')">
+                        <div class="col-xs-12 col-sm-4" ng-class="validation.calendarCssClass(packingPlanDataForm, planObject.endDate)">
                           <date-picker-field
                             disable="readOnly || shouldDisableEndDate"
                             form="packingPlanDataForm"
