--- a/app/views/excise-duty-list.html
+++ b/app/views/excise-duty-list.html
@@ -20,7 +20,7 @@
     <error-dialog form-object="exciseDutyCreateForm" error-response="errorResponse" display="displayError">
     </error-dialog>
 
-    <form name="exciseDutyCreateForm" ng-submit="createExciseDuty()">
+    <form name="exciseDutyCreateForm" class="form edit-form create-item-form">
 
       <div class="panel panel-default collapse no-transition" id="create-collapse">
         <div class="panel-heading">
@@ -28,7 +28,8 @@
             <div class="col-xs-8">
               <h3>Create New Excise Duty</h3>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-4" >
+              <div class="form-group" ng-class="{ 'has-error' : newRecord.country && displayError , 'has-success' : newRecord.country }">
               <label>Country *</label>
               <ui-select required="true"
                          ng-model="newRecord.country"
@@ -41,13 +42,14 @@
                   <div ng-bind-html="country.countryName | highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
+              </div>
             </div>
           </div>
         </div>
         <div class="panel-body">
           <div class="row">
             <div class="col-xs-12 col-sm-4">
-              <div class="form-group">
+              <div class="form-group" ng-class="{ 'has-error' : !newRecord.commodityCode && displayError , 'has-success' : newRecord.commodityCode }">
                 <label>Commodity Code *</label>
                 <input class="form-control"
                        name="commodityCode"
@@ -57,7 +59,7 @@
                        ng-required="shouldRequireCreateFields()">
               </div>
             </div>
-            <div class="col-xs-6 col-sm-4">
+            <div class="col-xs-6 col-sm-4" ng-class="{ 'has-error' : !newRecord.startDate && displayError , 'has-success' : newRecord.startDate}">
               <date-picker-field
                 name="startDate"
                 class="form-group"
@@ -68,7 +70,7 @@
                 ng-required="shouldRequireCreateFields()">
               </date-picker-field>
             </div>
-            <div class="col-xs-6 col-sm-4">
+            <div class="col-xs-6 col-sm-4" ng-class="{ 'has-error' : !newRecord.startDate && displayError , 'has-success' : newRecord.startDate}">
               <date-picker-field
                 name="endDate"
                 class="form-group"
@@ -82,7 +84,7 @@
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-4">
-              <div class="form-group">
+              <div class="form-group" ng-class="{ 'has-error' : !newRecord.dutyRate && displayError , 'has-success' : newRecord.dutyRate}">
                 <label>Duty Rate *</label>
 
                 <div class="input-group">
@@ -98,7 +100,7 @@
               </div>
             </div>
             <div class="col-xs-6 col-sm-4">
-              <div class="form-group">
+              <div class="form-group" ng-class="{ 'has-error' : !newRecord.volumeUnitId && displayError , 'has-success' : newRecord.volumeUnitId}">
                 <label>Volumetric Measure *</label>
                 <select class="form-control"
                         ng-model="newRecord.volumeUnitId"
@@ -130,7 +132,7 @@
         </div>
         <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearCreateForm(true)" id="clearExciseDutyId">Clear All</button>
-          <button type="submit" class="btn btn-success" id="submitExciseDutyId"><span class="fa fa-check"></span> Save</button>
+          <button type="submit" class="btn btn-success" ng-click="createExciseDuty()" id="submitExciseDutyId"><span class="fa fa-check"></span> Save</button>
         </div>
       </div>
     </form>
@@ -219,12 +221,14 @@
           <td>
             <span ng-hide="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">{{ exciseDuty.commodityCode }}</span>
           <span ng-show="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">
-            <input class="form-control"
+              <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.commodityCode && displayError , 'has-success' : recordToEdit.commodityCode }">
+              <input class="form-control"
                    name="editCommodityCode"
                    custom-validity
                    custom-pattern="alphanumericSpaces"
                    ng-model="recordToEdit.commodityCode"
                    ng-disabled="!canDelete(exciseDuty)">
+              </div>     
           </span>
           </td>
           <td>
@@ -250,6 +254,7 @@
           <td>
             <span ng-hide="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">{{ exciseDuty.dutyRate | number: 2}}</span>
           <span ng-show="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">
+            <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.dutyRate && displayError , 'has-success' : recordToEdit.dutyRate}">
             <input ng-model="recordToEdit.dutyRate"
                    name="editDutyRate"
                    custom-validity
@@ -257,10 +262,12 @@
                    maxlength="10"
                    ng-disabled="!canDelete(exciseDuty)"
                    class="form-control">
+            </div>       
           </span>
           </td>
           <td>
             <span ng-hide="isSelectedToEdit(exciseDuty) && canDelete(exciseDuty)">{{ exciseDuty.startDate }}</span>
+            <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.startDate && displayError , 'has-success' : recordToEdit.startDate}">
             <date-picker-field
               name="editStartDate"
               class="form-group"
@@ -272,6 +279,7 @@
           </td>
           <td>
             <span ng-hide="isSelectedToEdit(exciseDuty)">{{ exciseDuty.endDate }}</span>
+            <div class="form-group" ng-class="{ 'has-error' : !recordToEdit.endDate && displayError , 'has-success' : recordToEdit.endDate}">            
             <date-picker-field
               name="editEndDate"
               custom-effective="true"
@@ -286,10 +294,8 @@
           <td>{{ getUpdatedOn(exciseDuty) }}</td>
           <td>{{ getUpdateBy(exciseDuty) }}</td>
           <td ng-show="isCRUD">
-            <button type="submit"
-                    class="btn btn-success btn-xs"
-                    tabindex="0"
-                    ng-show="isSelectedToEdit(exciseDuty)">
+            <button type="submit" class="btn btn-success btn-xs" tabindex="0" ng-show="isSelectedToEdit(exciseDuty)">
+            <!-- button class="btn btn-success btn-xs" tabindex="0" ng-show="isSelectedToEdit(exciseDuty)" ng-click="saveEdit()"-->
               <i class="fa fa-check"></i>
             </button>
             <button type="button"
